[project]
name = "content-forge"
version = "0.1.0"
description = "A cross-DCC SDK empowering professional pipeline development across major digital content tools. Deliver production-ready plugins and toolsets for Maya, Blender, Unreal, Unity, Substance, and Houdini through a unified API abstraction, robust version tolerance, and CI-integrated automation workflows."

authors = [
    {name = "Content Forge",email = "ContentForgeTeam@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "Apache-2.0" }
keywords = ["dcc", "plugin-development", "content-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "poetry-core (>=2.0.0,<3.0.0)",
    "click (>=8.2.1,<9.0.0)"
]

[tool.poetry]
packages = [{include = "content_forge", from = "src"}]


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
pyyaml = "^6.0.2"
tomli = "^2.2.1"
python-dotenv = "^1.1.0"
mypy = "^1.15.0"
types-click = "^7.1.8"
isort = "^6.0.1"
flake8 = "^7.2.0"
flake8-bugbear = "^24.12.12"
flake8-docstrings = "^1.7.0"


[tool.poetry.group.ui.dependencies]
pyside6 = "^6.9.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[tool.black]
line-length = 120
target-version = ["py312"]
include = '\.pyi?$'
skip-string-normalization = true
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = 4
lines_after_imports = 2
lines_between_types = 2
combine_as_imports = true
case_sensitive = true
skip = ["docs"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["mkdocs_gen_files", "mkdocs_gen_files.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = """
    -v
    --cov=content_forge
    --cov-report=term-missing
    --cov-report=html:coverage_html
    --cov-fail-under=80
    """

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
